formatting/cart changes

--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -6,21 +6,25 @@
 {% endblock %}
 
 {% block content %}
-    {% for product in products %}
-    <div class="product-detail">
-        <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
-        <h2>{{ product.name }}</h2>
-        <h3><a href="{{ product.collection.get_absolute_url }}">{{ product.collection }}</a></h3>  <!-- Changed category to collection -->
-        <p class="price">${{ product.price }}</p>
-        <form action="{% url 'cart:cart_add' product.id %}" method="post">
-            {{ cart_product_form }}
-            {% csrf_token %}
-            <input type="submit" value="Add to cart">
-        </form>
-        {{ product.description|linebreaks }}
+    <div class="product-list">
+        {% for product in products %}
+        <div class="product-detail">
+            <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
+            <div class="product-info">
+                <h2>{{ product.name }}</h2>
+                <h3><a href="{{ product.collection.get_absolute_url }}">{{ product.collection }}</a></h3>
+                <p class="price">${{ product.price }}</p>
+                <form action="{% url 'cart:cart_add' product.id %}" method="post">
+                    {{ product.cart_product_form }}  <!-- Use the unique form for each product -->
+                    {% csrf_token %}
+                    <input type="submit" value="Add to cart">
+                </form>
+                <p>{{ product.description|linebreaks }}</p>
+            </div>
+        </div>
+        <br>
+        {% endfor %}
     </div>
-    <br>
-    {% endfor %}
     <div>
         <a href="{% url 'shop:product_list' %}" class="button light">Continue shopping</a>
     </div>
