--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-  Your shopping cart
+  Your Shopping Cart
 {% endblock %}
 
 {% block content %}
@@ -14,33 +14,33 @@
         <th>Product</th>
         <th>Quantity</th>
         <th>Remove</th>
-        <th>Unit price</th>
+        <th>Unit Price</th>
         <th>Price</th>
       </tr>
     </thead>
     <tbody>
       {% for item in cart %}
-        {% with product=item.product %}
-          <tr>
-            <td>
-              <a href="{{ product.get_absolute_url }}">
-                <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
-              </a>
-            </td>
-            <td>{{ product.name }}</td>
-            <td>
-              <form action="{% url "cart:cart_add" product.id %}" method="post">
-                {{ item.update_quantity_form.quantity }}
-                {{ item.update_quantity_form.update }}
-                <input type="submit" value="Update">
-                {% csrf_token %}
-              </form>
-            </td>
-            <td><a href="{% url "cart:cart_remove" product.id %}">Remove</a></td>
-            <td class="num">${{ item.price }}</td>
-            <td class="num">${{ item.total_price }}</td>
-          </tr>
-        {% endwith %}
+        <tr>
+          <td>
+            <a href="{{ item.product.get_absolute_url }}">
+              <img src="{% if item.product.image %}{{ item.product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}" alt="{{ item.product.name }}">
+            </a>
+          </td>
+          <td>{{ item.product.name }}</td>
+          <td>
+            <form action="{% url 'cart:cart_add' item.product.id %}" method="post">
+              {{ item.update_quantity_form.quantity }}
+              {{ item.update_quantity_form.update }}
+              {% csrf_token %}
+              <input type="submit" value="Update">
+            </form>
+          </td>
+          <td>
+            <a href="{% url 'cart:cart_remove' item.product.id %}" class="button">Remove</a>
+          </td>
+          <td class="num">${{ item.price }}</td>
+          <td class="num">${{ item.total_price }}</td>
+        </tr>
       {% endfor %}
       <tr class="total">
         <td>Total</td>
@@ -50,9 +50,7 @@
     </tbody>
   </table>
   <p class="text-right">
-    <a href="{% url "shop:product_list" %}" class="button light">Continue shopping</a>
-    <a href="{% url "orders:order_create" %}" class="button">
-      Checkout
-    </a>
+    <a href="{% url 'shop:product_list' %}" class="button light">Continue shopping</a>
+    <a href="{% url 'orders:order_create' %}" class="button">Checkout</a>
   </p>
 {% endblock %}
