--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -15,6 +15,25 @@
 <div id="header">
     <button onclick="window.location.href='/'"><h2>HOME</h2></button>
 </div>
+    <!--Display Login/Logout right-justified in navbar -->
+<ul class="nav navbar-nav ml-auto">
+    {% if user.is_authenticated %}
+        <li>
+            <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Log out</button>
+            </form>
+        </li>
+
+    {% else %}
+        <li><a class="nav-link" href="{% url 'login' %}"><span
+                class="glyphicon glyphicon-log-in" ></span>Login</a>
+        </li>
+        <li><a class="nav-link" href="{% url 'register' %}"><span class="glyphicon glyphicon-log-in"></span>Sign Up</a>
+        </li>
+
+    {% endif %}
+</ul>
 <div id="subheader">
     <div class="cart">
         {% with total_items=cart|length %}
@@ -30,6 +49,7 @@
         {% endwith %}
     </div>
 </div>
+
 <div id="content">
     {% block content %}
     {% endblock %}
