--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -1,22 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
 {% extends "shop/base.html" %}
-
-{% block title %}Create an Account{% endblock %}
-{% load crispy_forms_tags %}
-{% load crispy_forms_filters %}
-
 {% block content %}
-    <form method="POST" class="form-group">
-   {% csrf_token %}
 
-   {{ form|crispy }}
-   <button type="submit" class="btn btn-success">Register</button>
+  <div style="margin-top: -20px; text-align: right;">
+    <a class="button-link" href="{% url 'login' %}" style="margin-right: 10px;">Login</a>
+    <a class="button-link" href="{% url 'register' %}">Sign Up</a>
+  </div>
 
-    </form>
+  <h2>Create an Account</h2>
 
+  {% if form.errors %}
+    <p>There were errors in your submission. Please correct them below and try again.</p>
+  {% endif %}
+
+  <form method="post" action="{% url 'register' %}">
+    {% csrf_token %}
+    <table>
+      <tr>
+        <td>{{ form.username.label_tag }}</td>
+        <td>{{ form.username }}</td>
+      </tr>
+      <tr>
+        <td>{{ form.first_name.label_tag }}</td>
+        <td>{{ form.first_name }}</td>
+      </tr>
+      <tr>
+        <td>{{ form.last_name.label_tag }}</td>
+        <td>{{ form.last_name }}</td>
+      </tr>
+      <tr>
+        <td>{{ form.email.label_tag }}</td>
+        <td>{{ form.email }}</td>
+      </tr>
+      <tr>
+        <td>{{ form.password1.label_tag }}</td>
+        <td>{{ form.password1 }}</td>
+      </tr>
+      <tr>
+        <td>{{ form.password2.label_tag }}</td>
+        <td>{{ form.password2 }}</td>
+      </tr>
+    </table>
+    <input type="submit" value="Register" class="btn btn-success">
     <p><strong>Already have an account?</strong>
           <a href="{% url 'login' %}"> Login Now</a>
     </p>
+  </form>
+
 {% endblock %}
-</html>
