--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -1,49 +1,56 @@
 {% extends "shop/base.html" %}
 {% block content %}
 
-  <div style="margin-top: -20px; text-align: right;">
+<div style="margin-top: -20px; text-align: right;">
     <a class="button-link" href="{% url 'login' %}" style="margin-right: 10px;">Login</a>
     <a class="button-link" href="{% url 'register' %}">Sign Up</a>
-  </div>
+</div>
 
-  <h2>Create an Account</h2>
+<h2>Create an Account</h2>
 
-  {% if form.errors %}
-    <p>There were errors in your submission. Please correct them below and try again.</p>
-  {% endif %}
+{% if form.errors %}
+    <p style="color: red;">There were errors in your submission. Please correct them below and try again.</p>
+{% endif %}
 
-  <form method="post" action="{% url 'register' %}">
+<form method="post" action="{% url 'register' %}">
     {% csrf_token %}
     <table>
-      <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.first_name.label_tag }}</td>
-        <td>{{ form.first_name }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.last_name.label_tag }}</td>
-        <td>{{ form.last_name }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.email.label_tag }}</td>
-        <td>{{ form.email }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.password1.label_tag }}</td>
-        <td>{{ form.password1 }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.password2.label_tag }}</td>
-        <td>{{ form.password2 }}</td>
-      </tr>
+        <tr>
+            <td>{{ form.username.label_tag }}</td>
+            <td>{{ form.username }}</td>
+            <td style="color: red;">{{ form.username.errors }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.first_name.label_tag }}</td>
+            <td>{{ form.first_name }}</td>
+            <td style="color: red;">{{ form.first_name.errors }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.last_name.label_tag }}</td>
+            <td>{{ form.last_name }}</td>
+            <td style="color: red;">{{ form.last_name.errors }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.email.label_tag }}</td>
+            <td>{{ form.email }}</td>
+            <td style="color: red;">{{ form.email.errors }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.password1.label_tag }}</td>
+            <td>{{ form.password1 }}</td>
+            <td style="color: red;">{{ form.password1.errors }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.password2.label_tag }}</td>
+            <td>{{ form.password2 }}</td>
+            <td style="color: red;">{{ form.password2.errors }}</td>
+        </tr>
     </table>
     <input type="submit" value="Register" class="btn btn-success">
-    <p><strong>Already have an account?</strong>
-          <a href="{% url 'login' %}"> Login Now</a>
-    </p>
-  </form>
+</form>
+
+<p><strong>Already have an account?</strong>
+    <a href="{% url 'login' %}">Login Now</a>
+</p>
 
 {% endblock %}
