--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -31,7 +31,9 @@
     <p><strong>Don't have an account?</strong>
           <a href="{% url 'register' %}"> Sign Up Now</a>
     </p>
-
+    <p>
+        <a href="{% url 'password_reset' %}">Forgot your password?</a>
+    </p>
   </form>
-    
+
 {% endblock %}
